@@ -9,6 +9,7 @@
 	* src/racoon/admin.c: avoid reusing free'd pointer (Coverity)
 	* src/racoon/{admin.c|sockmisc.c}: Fix memory leak (Coverity), refactor
 	  the code to use port get/set function
+	* src/racoon/admin.c: fix memory leak (Coverity)
 	
 2006-10-01  Emmanuel Dreyfus  <manu@netbsd.org>
 	* src/racoon/isakmp.c: Avoid using NULL pointer (Coverity)
